👌(layout) fix accordion border line
Accordion left border which make the path between item dots was
ending too far compared to mockup. This was due to CSS techniques
and HTML structure.

This commit just fix this with additional line in accordion
Javascript code to add an attribute on item so we can match
something in CSS and avoid border line to continue after the dot
when not opened. Also this adjust some margin on checkmark list from
previous commit 5d3b383.

--- a/src/frontend/scss/components/templates/courses/cms/_course_detail.scss
+++ b/src/frontend/scss/components/templates/courses/cms/_course_detail.scss
@@ -201,13 +201,14 @@
 
         li {
           position: relative;
+          margin-top: 0.9rem;
           padding-left: 1.5rem;
 
           &::before {
             content: '';
             display: block;
             position: absolute;
-            top: 0.1rem;
+            top: 0.2rem;
             left: 0;
             width: 0.8rem;
             height: 0.8rem;
@@ -218,10 +219,6 @@
             background-repeat: no-repeat;
             background-position: top left;
             background-size: 100% 100%;
-          }
-
-          & + li {
-            margin-top: 0.9rem;
           }
         }
       }
